Update and rename cronjob.yml to cronjob.yaml

--- a/K8s/CronJob/cronjob.yaml
+++ b/K8s/CronJob/cronjob.yaml
@@ -1,3 +1,5 @@
+application/job/cronjob.yaml 
+
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
@@ -16,3 +18,4 @@ spec:
             - -c
             - date; echo Hello from the Kubernetes cluster
           restartPolicy: OnFailure
+
