--- a/K8s/CronJob/cronjob.yaml
+++ b/K8s/CronJob/cronjob.yaml
@@ -1,20 +1,18 @@
---- 
 apiVersion: batch/v1beta1
 kind: CronJob
-metadata: 
+metadata:
   name: hello
-spec: 
-  jobTemplate: 
-    spec: 
-      template: 
-        spec: 
-          containers: 
-            - 
-              args: 
-                - /bin/sh
-                - "-c"
-                - "date; echo Hello from the Kubernetes cluster"
-              image: busybox
-              name: hello
-          restartPolicy: OnFailure
+spec:
   schedule: "*/1 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          containers:
+          - name: hello
+            image: busybox
+            args:
+            - /bin/sh
+            - -c
+            - date; echo Hello from the Kubernetes cluster
+          restartPolicy: OnFailure
