--- a/K8s/CronJob/job_1.yaml
+++ b/K8s/CronJob/job_1.yaml
@@ -1,16 +1,14 @@
---- 
 apiVersion: batch/v1
 kind: Job
-metadata: 
-  name: hello
-spec: 
-  template: 
-    containers: 
-      - 
-        args: 
-          - /bin/sh
-          - "-c"
-          - "date; echo Hello from the Kubernetes cluster"
+metadata:
+  name: pi
+spec:
+  template:
+    spec:
+      containers:
+      - name: busybox
         image: busybox
-        name: hello
-    restartPolicy: Never
+        command:- date;echo Hello there
+      restartPolicy: Never
+  backoffLimit: 4
+
